--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -168,8 +168,9 @@ p {
 
 #navigationWrap {
     position: relative;
-    margin: 100px 0 100px;
+    margin: 10px 0 40px;
     width: 100%;
+    height: 150px
 }
 
 .menuWrap {
